# beaxplorer

./: .env.example  Cargo.toml  README.md  justfile
db/: Cargo.toml
db/migrations/0.1.0_00000001_init/: down.sql  up.sql
db/src/: db_connection.rs  errors.rs  lib.rs  models.rs  schema.rs
db/src/models/: blocks.rs  epochs.rs  mod.rs
db/src/queries/: blocks.rs  epochs.rs  mod.rs  validators.rs
indexer/: Cargo.toml
indexer/src/: beacon_node_client.rs  db_to_files_indexer.rs  direct_indexer.rs  epoch_retriever.rs  errors.rs  field_binary_heap.rs  indexable.rs  indexer.rs  launcher.rs  lib.rs  main.rs  node_to_db_indexer.rs  node_to_files_indexer.rs  ord_epoch.rs  orderable.rs  persistable.rs  persistable_binary_heap.rs  persistable_collection.rs  persistable_fields.rs  persisting_path.rs  retriever.rs  test_utils.rs  work.rs
indexer/src/beacon_chain/: beacon_chain_builder.rs  beacon_context.rs  mod.rs
indexer/src/db/: block_by_root_requests.rs  block_range_request_state.rs  block_range_requests.rs  block_roots_cache.rs  blocks_by_epoch.rs  indexing_state.rs  latest_epoch.rs  latest_slot.rs  mod.rs  peer_db.rs  proposed_block_roots.rs  votes_cache.rs
indexer/src/indexer/: eth_events.rs  mod.rs  network_events.rs  test_utils.rs  works.rs
indexer/src/network/: active_requests.rs  augmented_network_service.rs  block_by_root_requests.rs  block_by_root_requests_worker.rs  block_db.rs  block_range_request.rs  consensus_network.rs  consensus_service.rs  event.rs  event_adapter.rs  execution_network.rs  execution_service.rs  mod.rs  network_service.rs  peer_db.rs  peers_manager.rs  persist_service.rs  persist_worker.rs  request_handler.rs  request_history.rs  request_manager.rs  service.rs  worker.rs
indexer/src/network/workers/: block_by_root_requests_worker.rs  block_range_request_worker.rs  mod.rs  persist_block_worker.rs  persist_epoch_worker.rs  persist_existing_block_worker.rs  persist_worker.rs
indexer/src/types/: block_state.rs  consolidated_block.rs  consolidated_deposits.rs  consolidated_epoch.rs  consolidated_execution_layer_deposit.rs  consolidated_validator.rs  epoch_container.rs  meta.rs  mod.rs  model.rs  spec_epoch_model.rs
indexer/src/workers/: index_worker.rs  mod.rs  persist_block_worker.rs  persist_epoch_worker.rs  persist_validator_worker.rs
indexer/tests/: consolidated_epoch.rs  epoch_retriever.rs  mod.rs
indexer_cli/: .gitignore  Cargo.toml
indexer_cli/src/: cli.rs  db_to_files.rs  direct.rs  main.rs  node_to_db.rs  node_to_files.rs  span_duration.rs
indexer_macro/: Cargo.toml
indexer_macro/src/: lib.rs  persistable.rs  persistable_field.rs  to_path.rs
node_client/: Cargo.toml
node_client/src/: config.rs  lib.rs  models.rs
node_client/tests/: client.rs  mod.rs
shared/: Cargo.toml
shared/src/utils/: clock.rs  convert.rs  mod.rs
types/: Cargo.toml
types/src/: attestation.rs  block.rs  block_request.rs  block_root.rs  commitee.rs  committee.rs  consolidated_block.rs  consolidated_epoch.rs  deposit.rs  epoch.rs  good_peer.rs  lib.rs  meta.rs  model.rs  models.rs  path.rs  persistable.rs  persisting_path.rs  validator.rs  views.rs  vote.rs
types/src/utils/: block_by_root_request_state.rs  field_binary_heap.rs  meta_cache.rs  mod.rs  model_cache.rs  orderable.rs  persistable_cache.rs  request_attempts.rs
web/: .gitignore  Cargo.toml  Rocket.toml  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/components/: aggregation-bits.tsx  badge.tsx  breadcrumb.tsx  card.tsx  data-table.tsx  datetime.tsx  ethers.tsx  field.tsx  header.tsx  layout.tsx  number.tsx  peer.tsx  percentage.tsx  relative-datetime.tsx  root.tsx  signature.tsx  tab-selector.tsx  table.tsx  trim.tsx
web/components/blocks/: blocks-table.tsx
web/frontend/: package.json  snowpack.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
web/frontend/config/: webpack.config.js  webpack.parts.js
web/frontend/src/: Epochs.svelte  index.js  index.ts
web/frontend/src/css/: home.css  main.css
web/frontend/src/js/: blocks.ts  epochs.ts  main.ts  pagination.ts  validators.ts
web/hooks/: accent.ts  blocks.ts  data-table.ts  data.ts
web/pages/: _app.tsx  blocks.tsx  deposits.tsx  epochs.tsx  index.tsx  indexing.tsx  validators.tsx
web/pages/block/: [slot].tsx
web/pages/epoch/: [epoch].tsx
web/pages/validators/: deposits.tsx
web/src/: app.rs  block_requests.rs  blocks.rs  deposits.rs  epochs.rs  fetcher.rs  get.rs  good_peers.rs  lib.rs  main.rs  page.rs  sort.rs  validators.rs
web/src/contexts/: block.rs  blocks.rs  epoch.rs  epochs.rs  home.rs  mod.rs  validator.rs  validators.rs
web/src/contexts/common/: breadcrumb.rs  mod.rs
web/src/controllers/: blocks.rs  epochs.rs  mod.rs  validators.rs
web/src/helpers/: db.rs  mod.rs  to_formatted_string.rs
web/src/requests/: api.rs
web/src/views/: attestations.rs  block.rs  block_requests.rs  blocks.rs  committees.rs  deposits.rs  epoch.rs  epochs.rs  errors.rs  good_peers.rs  meta.rs  mod.rs  paginated.rs  validator.rs  validators.rs  votes.rs
web/styles/: main.css
web/styles/outline/: icons.eot
web/styles/solid/: icons.css
web/templates/: block.html.hbs  blocks.html.hbs  epoch.html.hbs  epochs.html.hbs  index.html.hbs  validator.html.hbs  validators.html.hbs
web/templates/common/: breadcrumb.html.hbs  header.html.hbs  icon.html.hbs  nav.html.hbs  pagination.html.hbs
web_static/: Cargo.toml  next.config.js  package.json  postcss.config.js
web_static/components/: breadcrumb.tsx  data-table.tsx  ethers.tsx  header.tsx  icon.tsx  layout.tsx  nav.tsx  number.tsx
web_static/pages/: _app.tsx  blocks.tsx  epochs.tsx  index.tsx  validators.tsx
web_static/pages/block/: [block].tsx
web_static/pages/epoch/: [epoch].tsx
web_static/src/: epochs.rs  fetcher.rs  get.rs  lib.rs  main.rs  page.rs  sort.rs  validators.rs
web_static/styles/: main.css
web_static/styles/outline/: icons.css
web_static/styles/solid/: icons.css  icons.eot
