[workspace]
members = ["web", "indexer", "indexer_cli", "indexer_macro", "types", "shared"]

[patch]
[patch.crates-io]
tree_hash = { git = "https://github.com/sigp/lighthouse" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse" }
eth2_serde_utils = { git = "https://github.com/sigp/lighthouse" }
fixed-hash = { git = "https://github.com/paritytech/parity-common", rev = "df638ab0885293d21d656dc300d39236b69ce57d" }
warp = { git = "https://github.com/macladson/warp", rev = "7e75acc368229a46a236a8c991bf251fe7fe50ef" }

[patch.'https://github.com/sigp/lighthouse']
eth2_network_config = { path = "../lighthouse/common/eth2_network_config" }
environment = { path = "../lighthouse/lighthouse/environment" }
task_executor = { path = "../lighthouse/common/task_executor" }
beacon_node = { path = "../lighthouse/beacon_node" }
network = { path = "../lighthouse/beacon_node/network" }
lighthouse_network = { path = "../lighthouse/beacon_node/lighthouse_network" }
client = { path = "../lighthouse/beacon_node/client" }
store = { path = "../lighthouse/beacon_node/store" }
eth2 = { path = "../lighthouse/common/eth2" }
lighthouse_types = { package = "types", path = "../lighthouse/consensus/types" }
sensitive_url = { path = "../lighthouse/common/sensitive_url" }
slot_clock = { path = "../lighthouse/common/slot_clock" }
state_processing = { path = "../lighthouse/consensus/state_processing" }
genesis = { path = "../lighthouse/beacon_node/genesis" }
lru_cache = { path = "../lighthouse/common/lru_cache" }
execution_layer = { path = "../lighthouse/beacon_node/execution_layer" }

[patch."https://github.com/ralexstokes/mev-rs"]
mev-rs = { git = "https://github.com/ralexstokes//mev-rs", rev = "7813d4a4a564e0754e9aaab2d95520ba437c3889" }
[patch."https://github.com/ralexstokes/ethereum-consensus"]
ethereum-consensus = { git = "https://github.com/ralexstokes//ethereum-consensus", rev = "9b0ee0a8a45b968c8df5e7e64ea1c094e16f053d" }
[patch."https://github.com/ralexstokes/ssz-rs"]
ssz-rs = { git = "https://github.com/ralexstokes//ssz-rs", rev = "adf1a0b14cef90b9536f28ef89da1fab316465e1" }
