[package]
name = "db"
version = "0.1.0"
authors = ["Aurel <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"

types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
bls = { git = "https://github.com/sigp/lighthouse", branch = "stable" }