[package]
name = "indexer"
version = "0.1.0"
authors = ["Aurel <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.26"
log = "0.4.14"
simple_logger = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
rmp = "^0.8"
rmp-serde = "^0.15"
flate2 = "1.0"
db = { path = "../db" }
shared = { path = "../shared" }
types = { path = "../types" }

eth2 = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
lighthouse_types = { package = "types", git = "https://github.com/sigp/lighthouse", branch = "stable" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", branch = "stable" }