[package]
name = "indexer"
version = "0.1.0"
authors = ["Aurel <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
async-stream = "0.3.2"
dotenv = "0.15.0"
thiserror = "1.0.26"
tracing = "0.1"
slog = "2.7"
tracing-slog = "0.2"
serde = { version = "1.0", features = ["derive"] }
rmp = "^0.8"
rmp-serde = "^0.15"
flate2 = "1.0"
itertools = "0.10"
clap = "2.34"
rand = "0.8.5"
pin-project = "1.0.10"
parking_lot = "0.12"
lru = "0.10"
shared = { path = "../shared" }
types = { path = "../types", features = ["indexing"] }
indexer_macro = { path = "../indexer_macro" }

eth2_network_config = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
environment = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
task_executor = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
beacon_node = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
network = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
lighthouse_network = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
client = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
store = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
eth2 = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
state_processing = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
genesis = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
lighthouse_types = { package = "types", git = "https://github.com/sigp/lighthouse", branch = "stable" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", branch = "stable" }

[dependencies.libp2p]
version = "0.43.0"
default-features = false
features = [
    "websocket",
    "identify",
    "mplex",
    "yamux",
    "noise",
    "gossipsub",
    "dns-tokio",
    "tcp-tokio",
    "plaintext",
    "secp256k1",
]
