[package]
name = "indexer_cli"
version = "0.1.0"
authors = ["Aurélien <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive", "env"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ctrlc = "3.2.0"
indexer = { path = "../indexer" }
