[package]
name = "node_client"
version = "0.1.0"
authors = ["Aurel <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
enr = { version = "=0.5.0", features = ["ed25519", "k256"] }

eth2 = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }