[package]
name = "shared"
version = "0.1.0"
authors = ["Aurélien <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
timeago = "0.3"
thiserror = "1.0.26"
types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
slot_clock = { git = "https://github.com/sigp/lighthouse", branch = "stable" }