[package]
name = "types"
version = "0.1.0"
authors = ["Aurel <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth2 = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
lighthouse_types = { git = "https://github.com/sigp/lighthouse", package = "types", branch = "stable" }