[package]
name = "web"
version = "0.1.0"
authors = ["Aurel <aurelien.catinon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.26"
types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
db = { path = "../db" }
shared = { path = "../shared" }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
