[package]
name = "web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
reqwest = "^0.11"
bytes = "1.1.0"
rmp-serde = "^0.15"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { git = "https://github.com/cloudflare/serde-wasm-bindgen", rev = "a995040" }
thiserror = "1.0"
js-sys = "0.3.52"
web-sys = "0.3.55"

types = { path = "../types" }